Fixes #343567 (HttpClient does not limit the destination's exchange queue).
git-svn-id: svn+ssh://dev.eclipse.org/svnroot/rt/org.eclipse.jetty/jetty/trunk@3028 7e9141cc-0065-0410-87d8-b60c137991c4